--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         <nav>
           <ul class="nav justify-content-center .bg-light">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="https://www.apple.com" target="_blank">Apple</a>
             </li>
             <li class="nav-item">
@@ -55,11 +52,11 @@
         <article>
         </div><div class="card" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">LinkedIn</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Perfil de LinkedIn</h6>
+            <p class="card-text">En los proximos links, va a poder ingresar a mi perfil de LinkedIn.</p>
+            <a href="https://www.linkedin.com/in/franco-filippo/" class="card-link" target="_blank">Mi Perfil</a>
+            <a href="https://www.linkedin.com/in/franco-filippo/overlay/about-this-profile/" class="card-link">Acerca de</a>
           </div>
         </div>
         </article>
