--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="card-body">
             <h5 class="card-title">LinkedIn</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Perfil de LinkedIn</h6>
-            <p class="card-text">En los proximos links, va a poder ingresar a mi perfil de LinkedIn. Además, podra acceder a la seccion sobre mi.</p>
+            <p class="card-text">En los proximos links, va a poder ingresar a mi perfil de LinkedIn y al apartado sobre mí.</p>
             <a href="https://www.linkedin.com/in/franco-filippo/" class="card-link" target="_blank">Mi Perfil</a>
             <a href="https://www.linkedin.com/in/franco-filippo/overlay/about-this-profile/" class="card-link">Acerca de</a>
           </div>
