--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="text-white">Progreso en JS.</h1>
         <h2>Esta página web es para practicar.</h2>
         <nav>
-          <ul class="nav justify-content-center .bg-light">
+          <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link" href="https://www.apple.com" target="_blank">Apple</a>
             </li>
@@ -28,15 +28,14 @@
       </header>
       <section>
         <article>
-        </div><div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+          <div class="card" style="width: 18rem;">
+            <img src="./images/Logo-Linkedin.png" class="card-img-top width-80%" alt="LinkedIn">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary">Mi Perfil.</a>
+            </div>
           </div>
-        </div>
         </article>
         <article>
         </div><div class="card" style="width: 18rem;">
