--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi pagina web</title>
+    <title>Mi Portfolio | Franco Filippo</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
@@ -11,7 +11,6 @@
     <main>
       <header>
         <h1 class="text-white">Progreso en JS.</h1>
-        <h2>Esta página web es para practicar.</h2>
         <nav>
           <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -25,14 +24,15 @@
             </li>
           </ul>
         </nav>
+        <h2>Esta página web es para practicar.</h2>
       </header>
       <section>
         <article>
           <div class="card" style="width: 18rem;">
             <img src="./images/Logo-Linkedin.png" class="card-img-top width-80%" alt="LinkedIn">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Mi perfil LinkedIn</h5>
+              <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis experiencias laborales y mis estudios.</p>
               <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary">Mi Perfil.</a>
             </div>
           </div>
