--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <h1 class="text-white">Progreso en JS.</h1>
+        <h1 class="text-white m-0">Progreso en JS.</h1>
         <nav>
           <ul class="nav justify-content-center">
             <li class="nav-item">
