--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <h1 class="text-white m-0">Progreso en JS.</h1>
+        <h1 class="text-white m-0">Mi Portfolio | Franco Filippo</h1>
         <nav>
           <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -24,7 +24,13 @@
             </li>
           </ul>
         </nav>
-        <h2>Esta página web es para practicar.</h2>
+        <section class="descripcion">
+          <h3>Bienvenidos a mi Portfolio!</h3>
+          <p>
+            Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
+          </p>
+        </section>
+
       </header>
       <section>
         <article>
@@ -62,7 +68,7 @@
     </section>
     </main>
     <footer>
-      <h3>Footer Section</h3>
+      <h4>Footer Section</h4>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
