--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <nav>
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.apple.com" target="_blank">Apple</a>
+              <a class="nav-link" href="./index.html" >Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.coderhouse.com" target="_blank">CoderHouse</a>
+              <a class="nav-link" href="./pages/trabajos.html" >Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com" target="_blank">Youtube</a>
+              <a class="nav-link" href="./pages/contactos.html" >Contacto</a>
             </li>
           </ul>
         </nav>
