--- a/index.html
+++ b/index.html
@@ -39,31 +39,29 @@
             <div class="card-body">
               <h5 class="card-title">Mi perfil LinkedIn</h5>
               <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis experiencias laborales y mis estudios.</p>
-              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary">Mi Perfil.</a>
+              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
             </div>
           </div>
         </article>
         <article>
-        </div><div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Apple</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Página oficial de Apple</h6>
-            <p class="card-text">Dentro de esta tarjeta, se puede ingresar a la pagina oficial de Apple</p>
-            <a href="https://www.apple.com" class="card-link" target="_blank">Sitio Oficial</a>
-            <a href="https://www.apple.com/la/" class="card-link" target="_blank">Sitio en LATAM</a>
+          <div class="card" style="width: 18rem;">
+            <img id="img-github" src="./images/logo github.png" class="card-img-top width-80%" alt="LinkedIn">
+            <div class="card-body">
+              <h5 class="card-title">Mi perfil GitHub</h5>
+              <p class="card-text">En mis repositorios remotos alojados en GitHub, se encuentran disponibles mis proyectos y trabajos en curso. Al hacer clic en el botón debajo, podrá acceder a los mismos.</p>
+              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
+            </div>
           </div>
-        </div>
         </article>
         <article>
-        </div><div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">LinkedIn</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Perfil de LinkedIn</h6>
-            <p class="card-text">En los proximos links, va a poder ingresar a mi perfil de LinkedIn y al apartado sobre mí.</p>
-            <a href="https://www.linkedin.com/in/franco-filippo/" class="card-link" target="_blank">Mi Perfil</a>
-            <a href="https://www.linkedin.com/in/franco-filippo/overlay/about-this-profile/" class="card-link">Acerca de</a>
+          <div class="card" style="width: 18rem;">
+            <img src="./images/Logo-Linkedin.png" class="card-img-top " alt="LinkedIn">
+            <div class="card-body">
+              <h5 class="card-title">Mi perfil LinkedIn</h5>
+              <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis experiencias laborales y mis estudios.</p>
+              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
+            </div>
           </div>
-        </div>
         </article>
     </section>
     </main>
