--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     </main>
     <footer>
-      <h4>Footer section</h4>
+      <h4>-- Footer section --</h4>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
