--- a/index.html
+++ b/index.html
@@ -36,16 +36,6 @@
       <section>
         <article>
           <div class="card" style="width: 18rem;">
-            <img src="./images/Logo-Linkedin.png" class="card-img-top width-80%" alt="LinkedIn">
-            <div class="card-body">
-              <h5 class="card-title">Mi perfil LinkedIn</h5>
-              <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis experiencias laborales y mis estudios.</p>
-              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
-            </div>
-          </div>
-        </article>
-        <article>
-          <div class="card" style="width: 18rem;">
             <img id="img-github" src="./images/logo github.png" class="card-img-top width-80%" alt="LinkedIn">
             <div class="card-body">
               <h5 class="card-title">Mi perfil GitHub</h5>
@@ -55,11 +45,21 @@
           </div>
         </article>
         <article>
-          <div class="card" style="width: 18rem;">
-            <img src="./images/Logo-Linkedin.png" class="card-img-top " alt="LinkedIn">
+          <div id="link_in" class="card" style="width: 18rem;">
+            <img src="./images/Logo-Linkedin.png" class="card-img-top width-80% m-auto" alt="LinkedIn">
             <div class="card-body">
               <h5 class="card-title">Mi perfil LinkedIn</h5>
-              <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis experiencias laborales y mis estudios.</p>
+              <p class="card-text">Dentro de esta tarjeta, podrá acceder a mi perfil de LinkedIn, donde podrá verificar mis <br>experiencias laborales <br>y mis estudios.</p>
+              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
+            </div>
+          </div>
+        </article>
+        <article>
+          <div class="card" style="width: 18rem;">
+            <img src="./images/Behance-Logo.png" class="card-img-top " alt="LinkedIn">
+            <div class="card-body">
+              <h5 class="card-title">Mi perfil Behance</h5>
+              <p class="card-text"> Behance es la plataforma donde suelo compartir mis proyectos y trabajos finalizados relacionados con el diseño multimedia. Al acceder a mi perfil, podrán ver todos ellos.</p>
               <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
             </div>
           </div>
