--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card-body">
               <h5 class="card-title">Mi perfil GitHub</h5>
               <p class="card-text">En mis repositorios remotos alojados en GitHub, se encuentran disponibles mis proyectos y trabajos en curso. Al hacer clic en el botón debajo, podrá acceder a los mismos.</p>
-              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
+              <a href="https://github.com/FrancoFilippo" class="btn btn-primary" target="_blank">Mi Perfil.</a>
             </div>
           </div>
         </article>
@@ -59,7 +59,7 @@
             <div class="card-body">
               <h5 class="card-title">Mi perfil Behance</h5>
               <p class="card-text"> Behance es la plataforma donde suelo compartir mis proyectos y trabajos finalizados relacionados con el diseño multimedia. Al acceder a mi perfil, podrán ver todos ellos.</p>
-              <a href="https://www.linkedin.com/in/franco-filippo/" class="btn btn-primary" target="_blank">Mi Perfil.</a>
+              <a href="https://www.behance.net/stellagagliar" class="btn btn-primary" target="_blank">Mi Perfil.</a>
             </div>
           </div>
         </article>
