--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <header>
-
+        <h1 class="text-white m-0">Mi Portfolio | Franco Filippo</h1>
+        <nav>
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html" >Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./trabajos.html" >Trabajos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactos.html" >Contacto</a>
+            </li>
+          </ul>
+        </nav>
     </header>
     <main>
 
