--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
           </ul>
         </nav>
         <section class="descripcion">
-          <h3>Bienvenido a mi Portfolio!</h3>
+          <h3>Bienvenidos a mi Portfolio!</h3>
           <p>
             Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
           </p>
         </section>
+        <article>
+
+        </article>
       </header>
       <section>
         <article>
@@ -68,7 +71,7 @@
     <footer>
       <h4>-- Footer section --</h4>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+     <script src="./js/index.js"></script>
   </body>
 </html>
