--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
             Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
           </p>
         </section>
-        <article>
-
-        </article>
       </header>
       <section>
         <article>
@@ -67,6 +64,34 @@
           </div>
         </article>
     </section>
+    <section>
+      <h2>
+        
+      </h2>
+    </section>
+    <section id="informacion">
+      <div>
+      <article id="bloque1">
+        <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba">
+        <p class="--bs-dark-border-subtle">
+          hola que tal <br> buenas tardes <br> como estan
+        </p>
+      </article>
+      <article id="bloque2">
+        <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba2">
+        <p>
+          hola que tal <br> buenas tardes <br> como estan
+        </p>
+      </article>
+    </article>
+    <article id="bloque2">
+      <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba2">
+      <p>
+        hola que tal <br> buenas tardes <br> como estan
+      </p>
+    </article>
+    </section>
+  </div>
     </main>
     <footer>
       <h4>-- Footer section --</h4>
