--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <section class="descripcion">
           <h3>Bienvenidos a mi Portfolio!</h3>
-          <p>
+          <p class="pt-3">
             Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
           </p>
         </section>
@@ -62,9 +62,9 @@
         </article>
     </section>
     <section>
-      <h2>
-        
-      </h2>
+      <h3 id="mis_conocimientos">
+        Mis Conocimientos.
+      </h3>
     </section>
     <section id="informacion">
       <div>
