--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
     <section id="informacion">
       <div>
       <article id="bloque1">
-        <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba">
+        <img width="33%" id="pruebas" src="./images/logohtml.png" alt="prueba">
         <p class="--bs-dark-border-subtle">
           hola que tal <br> buenas tardes <br> como estan
         </p>
       </article>
       <article id="bloque2">
-        <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba2">
+        <img width="33%" id="pruebas" src="./images/jslogo.png" alt="prueba2">
         <p>
           hola que tal <br> buenas tardes <br> como estan
         </p>
       </article>
     </article>
     <article id="bloque3">
-      <img id="pruebas" src="./images/Logo-Linkedin.png" alt="prueba2">
+      <img width="33%" id="pruebas" src="./images/logocss.png" alt="prueba2">
       <p>
         hola que tal <br> buenas tardes <br> como estan
       </p>
