--- a/index.html
+++ b/index.html
@@ -61,33 +61,51 @@
           </div>
         </article>
     </section>
-    <section>
+    <section class="bg-body-tertiary">
       <h3 id="mis_conocimientos">
         Mis Conocimientos.
       </h3>
-    </section>
-    <section id="informacion">
-      <div>
-      <article id="bloque1">
-        <img width="33%" id="pruebas" src="./images/logohtml.png" alt="prueba">
-        <p class="--bs-dark-border-subtle">
-          hola que tal <br> buenas tardes <br> como estan
-        </p>
-      </article>
-      <article id="bloque2">
-        <img width="33%" id="pruebas" src="./images/jslogo.png" alt="prueba2">
-        <p>
-          hola que tal <br> buenas tardes <br> como estan
-        </p>
-      </article>
+      <section>
+        <article>
+      <div class="card mb-5 " style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./images/logohtml.png" class="img-fluid rounded-start" alt="html5">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">HTML5</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div><div class="card mb-5" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./images/css3logo.png" class="img-fluid rounded-start" alt="css">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">CSS</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div><div class="card mb-5" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./images/jslogo.png" class="img-fluid rounded-start" alt="javascript">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </article>
-    <article id="bloque3">
-      <img width="33%" id="pruebas" src="./images/logocss.png" alt="prueba2">
-      <p>
-        hola que tal <br> buenas tardes <br> como estan
-      </p>
-    </article>
-    </section>
+</section>
   </div>
     </main>
     <footer>
