--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         Mis Conocimientos.
       </h3>
       <section>
-        <article>
+        <article class="d-inline-block">
       <div class="card mb-5 " style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
@@ -105,11 +105,14 @@
         </div>
       </div>
     </article>
+    <article class="d-inline-block">
+      <img id="paqueteadobe" src="./images/paqueteadobe.png" alt="paqueteadobe" width="530px">
+    </article>
 </section>
-  </div>
+</div>
     </main>
     <footer>
-      <h4>-- Footer section --</h4>
+      <h4 class="p-4">-- Footer section --</h4>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <script src="./js/index.js"></script>
