--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h3 id="mis_conocimientos">
         Mis Conocimientos.
       </h3>
-      <section>
+      <section style="display: inline-flex; align-items: start;">
         <article class="d-inline-block">
       <div class="card mb-5 " style="max-width: 540px;">
         <div class="row g-0">
@@ -106,7 +106,7 @@
       </div>
     </article>
     <article class="d-inline-block">
-      <img id="paqueteadobe" src="./images/paqueteadobe.png" alt="paqueteadobe" width="530px">
+      <img id="paqueteadobe" src="./images/paqueteadobe.png" alt="paqueteadobe" width="480px">
     </article>
 </section>
 </div>
