--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </header>
       <section>
         <article>
-          <div class="card" style="width: 18rem;">
+          <div id="cartas" class="card" style="width: 18rem;">
             <img id="img-github" src="./images/logo github.png" class="card-img-top width-80%" alt="LinkedIn">
             <div class="card-body">
               <h5 class="card-title">Mi perfil GitHub</h5>
@@ -40,8 +40,8 @@
             </div>
           </div>
         </article>
-        <article>
-          <div id="link_in" class="card" style="width: 18rem;">
+        <article >
+          <div id="cartas" class="card" style="width: 18rem;">
             <img src="./images/Logo-Linkedin.png" class="card-img-top width-80% m-auto" alt="LinkedIn">
             <div class="card-body">
               <h5 class="card-title">Mi perfil LinkedIn</h5>
@@ -51,7 +51,7 @@
           </div>
         </article>
         <article>
-          <div class="card" style="width: 18rem;">
+          <div id="cartas" class="card" style="width: 18rem;">
             <img src="./images/Behance-Logo.png" class="card-img-top " alt="LinkedIn">
             <div class="card-body">
               <h5 class="card-title">Mi perfil Behance</h5>
@@ -66,8 +66,8 @@
         Mis Conocimientos.
       </h3>
       <section style="display: inline-flex; align-items: start;">
-        <article class="d-inline-block">
-      <div class="card mb-5 " style="max-width: 540px;">
+        <article  class="d-inline-block">
+      <div  class="card mb-5 " style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="./images/logohtml.png" class="img-fluid rounded-start" alt="html5">
