--- a/index.html
+++ b/index.html
@@ -70,43 +70,43 @@
       <div  class="card mb-5 " style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="./images/logohtml.png" class="img-fluid rounded-start" alt="html5">
+            <img src="./images/logohtml.png" class="mt-3 img-fluid rounded-start" alt="html5">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">HTML5</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">HTML5 ha sido una parte fundamental de mi conjunto de habilidades. A lo largo de mi experiencia, he cultivado un conocimiento sólido en esta tecnología, aprovechándola para crear sitios web dinámicos y compatibles con los estándares actuales. </p>
             </div>
           </div>
         </div>
       </div><div class="card mb-5" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="./images/css3logo.png" class="img-fluid rounded-start" alt="css">
+            <img src="./images/css3logo.png" class="mt-2 img-fluid rounded-start" alt="css">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Puedo organizar y diseñar páginas usando cajas, Flexbox y Grid. Agrego movimientos y transiciones para hacer las páginas más interactivas. Además, me aseguro de que los sitios se vean bien en diferentes dispositivos.</p>
             </div>
           </div>
         </div>
       </div><div class="card mb-5" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="./images/jslogo.png" class="img-fluid rounded-start" alt="javascript">
+            <img src="./images/jslogo.png" class="mt-3 img-fluid rounded-start" alt="javascript">
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">JavaScript</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Con habilidades básicas en JavaScript, puedo crear interactividad en sitios web utilizando variables para almacenar datos, operadores para realizar cálculos simples, estructuras de control para tomar decisiones y bucles para repetir tareas. </p>
             </div>
           </div>
         </div>
       </div>
     </article>
     <article class="d-inline-block">
-      <img id="paqueteadobe" src="./images/paqueteadobe.png" alt="paqueteadobe" width="480px">
+      <img id="paqueteadobe" src="./images/paqueteadobe.png" alt="paqueteadobe" width="520px">
     </article>
 </section>
 </div>
