--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
       <header>
         <h1 class="text-white m-0">Mi Portfolio | Franco Filippo</h1>
         <nav>
-          <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html" >Inicio</a>
+          <ul>
+            <li>
+              button
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/contactos.html" >Contacto</a>
+            <li>
+              button
+            </li>
+            <li>
+              button
             </li>
           </ul>
         </nav>
+      </header>
         <section class="descripcion">
           <h3>Bienvenidos a mi Portfolio!</h3>
           <p class="pt-3">
             Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
           </p>
         </section>
-      </header>
       <section>
         <article>
           <div id="cartas" class="card" style="width: 18rem;">
@@ -87,7 +90,7 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
-              <p class="card-text">Puedo organizar y diseñar páginas usando cajas, Flexbox y Grid. Agrego movimientos y transiciones para hacer las páginas más interactivas. Además, me aseguro de que los sitios se vean bien en diferentes dispositivos.</p>
+              <p class="card-text">Puedo organizar y diseñar páginas usando cajas, Flexbox y Grid. Agrego movimientos y transiciones para hacer las páginas más         interactivas. Además, me aseguro de que los sitios se vean bien en diferentes dispositivos.</p>
             </div>
           </div>
         </div>
