--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <nav>
           <ul>
             <li>
-              button
+              <a href="#perfiles">Perfiles</a>
             </li>
             <li>
-              button
+              <a href="">Conocimientos</a>
             </li>
             <li>
-              button
+              <a href="">Contacto</a>
             </li>
           </ul>
         </nav>
       </header>
         <section class="descripcion">
           <h3>Bienvenidos a mi Portfolio!</h3>
-          <p class="pt-3">
+          <p id="perfiles" class="pt-3">
             Dentro del mismo, tendrán la oportunidad de revisar detalladamente mis proyectos realizados, experiencias laborales, <br> así como los estudios completados y aquellos en los que continúo mi aprendizaje.
           </p>
         </section>
