--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="bg-body-tertiary">
     <main>
       <header>
         <h1 class="text-white m-0">Mi Portfolio | Franco Filippo</h1>
-        <nav>
+        <nav class="sticky-top">
           <ul>
             <li>
               <a href="#perfiles">Perfiles</a>
             </li>
             <li>
-              <a href="">Conocimientos</a>
+              <a href="#conocimientos">Conocimientos</a>
             </li>
             <li>
-              <a href="">Contacto</a>
+              <a href="...">Contacto</a>
             </li>
           </ul>
         </nav>
@@ -65,7 +65,7 @@
         </article>
     </section>
     <section class="bg-body-tertiary">
-      <h3 id="mis_conocimientos">
+      <h3 id="conocimientos" id="mis_conocimientos">
         Mis Conocimientos.
       </h3>
       <section style="display: inline-flex; align-items: start;">
