--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a href="#conocimientos">Conocimientos</a>
             </li>
             <li>
-              <a href="...">Contacto</a>
+              <a href="#conocimientos">Contacto</a>
             </li>
           </ul>
         </nav>
