--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <nav class="sticky-top">
           <ul>
             <li>
-              <a href="#perfiles">Perfiles</a>
+              <a class="border-bottom border-light" href="#perfiles">Perfiles</a>
             </li>
             <li>
-              <a href="#conocimientos">Conocimientos</a>
+              <a class="border-bottom border-light" href="#conocimientos">Conocimientos</a>
             </li>
             <li>
-              <a href="#conocimientos">Contacto</a>
+              <a class="border-bottom border-light" href="#conocimientos">Contacto</a>
             </li>
           </ul>
         </nav>
